lock_jason_file_add

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-react-portfolio-template",
-  "homepage": "https://YourUsername.github.io/profile/",
+  "homepage": "https://mdimam101.github.io/profile/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
